--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-.square {
-    background-color: grey;
-    border-color: black;
+#container {
+    display: flex;
+    /* align-content: center; */
+    justify-content: center;
+    flex-wrap: wrap;
+
+    margin: 100px;
+    padding: 10px;
+    /* padding: 50px; */
+    border: 2px solid black;
+    
 }
+
+    .square {
+        background-color: grey;
+        border: 0.01em solid black;
+        flex-basis: 7%;
+    }
